# tweakleaf

./: .dockerignore  .gitignore  LICENSE  README.md  important.txt  mcp-store.md  package.json  pnpm-lock.yaml  requirements.txt  sst.config.ts  todo.txt  turbo.json
.cursor/: mcp.json
.cursor/rules/: latex.mdc  mcp-store.mdc  styling-guideline.mdc
.husky/: pre-commit
apps/ai/: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  pyproject.toml  ruff.toml  sst.config.ts  sst.pyi
apps/ai/auth/: pyproject.toml
apps/ai/auth/src/auth/: __init__.py  config.py
apps/ai/compiler/: .dockerignore  Dockerfile  requirements.txt  sst.pyi
apps/ai/compiler/src/compiler/: api.py  deedy-resume-openfont.cls  service.py
apps/ai/database/: pyproject.toml
apps/ai/database/src/database/: client.py
apps/ai/functions/: pyproject.toml
apps/ai/functions/src/functions/: __init__.py  api.py  config.py
apps/ai/latex/: Dockerfile  pyproject.toml
apps/ai/latex/src/latex/: api.py  service.py
apps/ai/models/: pyproject.toml
apps/ai/tweak/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  sst.pyi
apps/ai/tweak/src/tweak/: api.py  graph.py  router.py  schemas.py  service.py
apps/ai/tweak/src/tweak/configs/: clerk.py  db.py
apps/ai/tweak/src/tweak/coverletter/: aiwords.py  fewshortprompt.py  graph.py  nodes.py  prompts.py  schemas.py  service.py
apps/ai/tweak/src/tweak/models/: __init__.py  config.py  factory.py
apps/ai/tweak/src/tweak/resumes/: graph.py  nodes.py  prompts.py  schemas.py  service.py
apps/ai/tweak/src/tweak/utils/: __init__.py  query.py  supabase.py  threads.py
apps/api/: .gitignore  CLERK_SETUP.md  README.md  app.py  entrypoint.sh  package.json  requirements.txt
apps/api/src/: utils.py
apps/api/src/auth/: __init__.py  clerk.py  config.py  dashboard.py
apps/api/src/clerk/: __init__.py  router.py  service.py
apps/api/src/latex/: router.py
apps/api/src/models/: __init__.py  factory.py
apps/api/src/services/: latex_compiler.py
apps/api/src/tweak/: config.py  graph.py  router.py  schemas.py  service.py
apps/latex/: pyproject.toml  sst.config.ts
apps/latex/compiler/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  sst.pyi
apps/latex/compiler/src/compiler/: api.py
apps/web/: .gitignore  components.json  middleware.ts  next.config.js  open-next.config.ts  package.json  sst-env.d.ts  sst.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/about/: page.tsx
apps/web/app/clerk/: page.tsx
apps/web/app/clerk2/: page.tsx
apps/web/app/client/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/components/: GlassIcons.tsx  GlassSurface.tsx  LaserFlow.tsx  PillNav.tsx  alert-dialog-component.tsx  app-sidebar.tsx  bento.tsx  comming-soon.tsx  compare-us.tsx  container-scroll-component.tsx  empty.tsx  features.tsx  footer.tsx  founder-tip.tsx  hero-video-dialog-top-in-bottom-out.tsx  humanized-pro-button-coverletter.tsx  humanized-pro-button-resume.tsx  laser-flow-dashboard.tsx  loader.tsx  logo-sidebar.tsx  models-switcher.tsx  natofications.tsx  nav-file-uploads.tsx  nav-main.tsx  nav-projects.tsx  nav-saved-files.tsx  nav-user.tsx  navbar.tsx  pill-nav.tsx  pricing-card.tsx  product-demo.tsx  reddit-posts.tsx  right-panel-settings.tsx  save-file-button.tsx  sidebar-nav.tsx  tooltip-component.tsx  tweak-header.tsx  tweak-sidebar.tsx  tweet-grid-component.tsx
apps/web/components/ai-chat/: ai-chat-message.tsx  ai-input.tsx
apps/web/components/cult-ui/: tweet-grid.tsx
apps/web/components/kokonutui/: ai-input.tsx  bento-grid.tsx  coverletter-ai-input.tsx  mistral.tsx  resume-ai-input.tsx
apps/web/components/left-panel/: job-tab.tsx  left-panel.tsx
apps/web/components/magicui/: bento-grid.tsx  shiny-button.tsx
apps/web/components/profile/: profile-header.tsx
apps/web/components/reactbits/: orb.tsx
apps/web/components/right-panel/: latex-tab.tsx  mail-tab.tsx  pdf-tab.tsx  (+3 more)
apps/web/configs/: cold-email-templates.ts  context-placeholders.ts  cover-letter-templates.ts  default-cover-letter-latex.ts  default-resume-latex.ts  inputs-placeholder-info.ts  latex-editor-theme.ts  llm-models-svg.tsx  local-storage-keys.ts  models.ts  navbar.ts  navigation.ts  plans.ts  resume-templates.ts  screen-to-layout-height.ts  settings-tabs.tsx  show-nabar-routes.ts  site.ts
apps/web/hooks/: use-axios.ts  use-compilation-state.ts  use-file-operations.ts  use-latex-compilation.ts  use-latex-content.ts  use-param.ts  use-pdf-management.ts  use-persistent-compilation-state.ts  use-persistent-pdf-state.ts  use-query-param.ts  use-supabase-client.ts  use-template-management.ts  use-tweak-coverletter.ts  use-tweak-resume.ts
apps/web/lib/: auth.ts  crypto.ts  tweetnacl.ts
apps/web/providers/: root-provider.tsx  set-localstorage-provider.tsx
apps/web/store/: store.ts
apps/web/styles/: globals.css
infra/: api.ts  domains.ts  frontend.ts  index.ts  router.ts  secrets.ts  sst.config.old.ts  web.ts
(+85 files in other folders)
