[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
]

[tool.uv.workspace]
members = [
    "models",
    "tweak",
    "latex",
    "functions",
]
