[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "supabase>=2.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
