[project]
name = "functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "tweak",
]

[tool.uv.sources]
tweak = { workspace = true }

[project.scripts]
functions = "functions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
