[project]
name = "latex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pdflatex>=0.1.3",
]

[project.scripts]
latex = "latex:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
