[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
models = "models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
