[project]
name = "tweak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
tweak = "tweak:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
