[project]
name = "compiler"
version = "0.1.0"
description = "LaTeX compilation service for AWS Lambda"
readme = "README.md"
authors = [
    { name = "Sayan De", email = "sayandeten@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pdflatex>=0.1.3",
    "fastapi[standard]>=0.116.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "mangum>=0.19.0",
]

[project.scripts]
compiler = "compiler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
